--- a/aria2/Dockerfile
+++ b/aria2/Dockerfile
@@ -12,7 +12,7 @@ RUN apk --update --no-cache add bash curl tar \
   #&& touch /etc/aria2/session.lock 
 
 COPY aria2.conf /config/aria2.conf 
-COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+#COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 VOLUME /home/aria2
 
 EXPOSE 6800
