--- a/aria2/Dockerfile
+++ b/aria2/Dockerfile
@@ -7,13 +7,15 @@ ENV ARIA2_URL=https://github.com/q3aql/aria2-static-builds/releases/download/v${
 
 RUN apk --update --no-cache add bash curl tar \
   && curl -sSL $ARIA2_URL | tar xj --strip 1 -C /usr/local/bin/ aria2-${ARIA2_VERSION}-linux-gnu-arm-rbpi-build1/aria2c \
-  && adduser -D aria2 #\
-  #&& mkdir -p /etc/aria2 \
-  #&& touch /etc/aria2/session.lock 
+  && adduser -D aria2 \
+  && mkdir -p /etc/aria2 \
+  && touch /etc/aria2/session.lock 
 
 COPY aria2.conf /config/aria2.conf 
-#COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 VOLUME /home/aria2
+VOLUME /data
+VOLUME /config
 
 EXPOSE 6800
 
