--- a/aria2/Dockerfile
+++ b/aria2/Dockerfile
@@ -10,6 +10,8 @@ RUN apk --update --no-cache add bash curl tar \
   && adduser -D aria2 \
   && mkdir -p /etc/aria2 \
   && touch /etc/aria2/session.lock 
+  
+RUN mkdir /config
 
 COPY aria2.conf /config/aria2.conf 
 COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
