--- a/aria2/Dockerfile
+++ b/aria2/Dockerfile
@@ -14,10 +14,10 @@ RUN apk --update --no-cache add bash curl tar \
 #RUN mkdir /config
 
 #COPY aria2.conf /config/aria2.conf 
-COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+#COPY ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 #VOLUME /home/aria2
 
-RUN mkdir /config
+#RUN mkdir /config
 
 EXPOSE 6800
 
