--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -8,11 +8,12 @@ ENV FILE_BROWSER_URL=https://github.com/filebrowser/filebrowser/releases/downloa
 #RUN apk --update --no-cache add bash curl tar \
 #  && curl -sSL $FILE_BROWSER_URL | tar xj --strip 1 -C /usr/local/bin/ linux-armv7-filebrowser/filebrowser
   
-RUN apk --update --no-cache add bash curl tar\
+RUN apk --update --no-cache add bash curl tar \
   curl -sSL $FILE_BROWSER_URL \
-  tar -zxf linux-armv7-filebrowser.tar.gz -C /usr/local/bin/
+  tar -zxf linux-armv7-filebrowser.tar.gz -C filebrowser \
+  chmod +x filebrowser/filebrowser
   
 EXPOSE 80 443
 
 CMD set -xe && \
- filebrowser config /.filebrowser.json
+ filebrowser/filebrowser config /.filebrowser.json
