--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -16,4 +16,4 @@ RUN apk --update --no-cache add bash curl tar \
   
 EXPOSE 80 443
 
-CMD filebrowser --config /.filebrowser.json
+CMD /app/filebrowser --config /.filebrowser.json
