--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 RUN apk --update --no-cache add bash curl tar \
   && curl -sSL $FILE_BROWSER_URL \
   && tar -zxf linux-armv7-filebrowser.tar.gz \
-  && mv filebrowser /app \
+  ##&& mv filebrowser /app \
   && chmod +x /app/filebrowser
   
 EXPOSE 80 443
