--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -8,7 +8,8 @@ ENV FILE_BROWSER_URL=https://github.com/filebrowser/filebrowser/releases/downloa
 WORKDIR /app
 
 RUN apk --update --no-cache add bash curl tar \
-  && curl -sSL $FILE_BROWSER_URL | tar -zxf linux-armv7-filebrowser.tar.gz \
+  && curl -sSL $FILE_BROWSER_URL \
+  && tar -zxf linux-armv7-filebrowser.tar.gz \
   && chmod +x filebrowser
   
 EXPOSE 80 443
