--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -8,9 +8,10 @@ ENV FILE_BROWSER_URL=https://github.com/filebrowser/filebrowser/releases/downloa
 WORKDIR /app
 
 RUN apk --update --no-cache add bash curl tar \
-  && curl -sSL $FILE_BROWSER_URL \
-  && tar -zxf linux-armv7-filebrowser.tar.gz \
-  && chmod +x filebrowser
+  && curl -sSL $FILE_BROWSER_URL | tar -zx -C /app \
+##  && tar -zxf linux-armv7-filebrowser.tar.gz \
+  && rm linux-armv7-filebrowser.tar.gz \
+  && chmod +x /app/filebrowser
   
 EXPOSE 80 443
 
