--- a/gitea/Dockerfile
+++ b/gitea/Dockerfile
@@ -46,5 +46,7 @@ RUN mkdir -p /app/gitea && \
 
 VOLUME ["/data"]
 
+RUN ln -s /app/gitea/gitea /usr/local/bin/gitea
+
 #ENTRYPOINT ["/usr/bin/entrypoint"]
 CMD ["/bin/s6-svscan", "/etc/s6"]
