--- a/gitea/Dockerfile
+++ b/gitea/Dockerfile
@@ -51,4 +51,4 @@ VOLUME ["/data"]
 #ENTRYPOINT ["/usr/bin/entrypoint"]
 #CMD ["/bin/s6-svscan", "/etc/s6"]
 USER git
-CMD /app/gitea/gitea  web -c /data/gitea/conf/app.ini
+CMD /app/gitea/gitea web
