--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -1,60 +1,20 @@
-FROM lsiobase/alpine:arm32v7-3.10 as buildstage
+FROM resin/raspberrypi3-alpine:edge
 
-# build variables
-ARG SYNCTHING_RELEASE
+LABEL AUTHOR=AnRightHand
 
-RUN \
- echo "**** install build packages ****" && \
- apk add --no-cache \
-	curl \
-	g++ \
-	gcc \
-	git \
-	go \
-	tar
+ENV SYNCTHING_VERSION=1.2.1
+ENV SYNCTHING_URL=https://github.com/syncthing/syncthing/releases/download/v${SYNCTHING_VERSION}/syncthing-linux-arm-v${SYNCTHING_VERSION}.tar.gz
 
-RUN \
-echo "**** fetch source code ****" && \
- if [ -z ${SYNCTHING_RELEASE+x} ]; then \
-	SYNCTHING_RELEASE=$(curl -sX GET "https://api.github.com/repos/syncthing/syncthing/releases/latest" \
-	| awk '/tag_name/{print $4;exit}' FS='[""]'); \
- fi && \
- mkdir -p \
-	/tmp/sync && \
- curl -o \
- /tmp/syncthing-src.tar.gz -L \
-	"https://github.com/syncthing/syncthing/archive/${SYNCTHING_RELEASE}.tar.gz" && \
- tar xf \
- /tmp/syncthing-src.tar.gz -C \
-	/tmp/sync --strip-components=1 && \
- echo "**** compile syncthing  ****" && \
- cd /tmp/sync && \
- CGO_ENABLED=0 go run build.go \
-	-no-upgrade \
-	-version=${SYNCTHING_RELEASE} \
-	build syncthing
+WORKDIR /app
 
-############## runtime stage ##############
-FROM lsiobase/alpine:arm32v7-3.10
-
-# set version label
-ARG BUILD_DATE
-ARG VERSION
-LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
-LABEL maintainer="sparklyballs,thelamer"
-
-# environment settings
-ENV HOME="/config"
-
-RUN \
- echo "**** create var lib folder ****" && \
- install -d -o abc -g abc \
-	/var/lib/syncthing
-
-# copy files from build stage and local files
-COPY --from=buildstage /tmp/sync/syncthing /usr/bin/
-COPY root/ /
-
-# ports and volumes
+RUN apk --update --no-cache add bash curl tar && \
+  curl -sSL $SYNCTHING_URL | tar -zx -C /app && \
+  mv /app/syncthing-linux-arm-v$SYNCTHING_VERSION/* /app && \
+  rm -d /app/syncthing-linux-arm-v$SYNCTHING_VERSION && \
+  && chmod +x /app/syncthing
+  
+  
 EXPOSE 8384 22000 21027/UDP
 VOLUME /config /sync
+
+CMD /app/syncthing -no-console -no-browser
