--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -11,7 +11,7 @@ RUN apk --update --no-cache add bash curl tar && \
   curl -sSL $SYNCTHING_URL | tar -zx -C /app && \
   mv /app/syncthing-linux-arm-v$SYNCTHING_VERSION/* /app && \
   rm -d /app/syncthing-linux-arm-v$SYNCTHING_VERSION && \
-  && chmod +x /app/syncthing
+  chmod +x /app/syncthing
   
   
 EXPOSE 8384 22000 21027/UDP
