--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -1,1 +1,14 @@
+FROM resin/raspberrypi3-alpine:edge
 
+LABEL AUTHOR=AnRightHand
+
+# install minidlna
+RUN apk --no-cache add minidlna
+
+# Add config file
+ADD minidlna.conf /etc/minidlna.conf
+
+EXPOSE 1900/udp
+EXPOSE 8200
+
+ENTRYPOINT [ "/usr/sbin/minidlnad", "-S" ]
