--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 RUN apk --update --no-cache add bash curl tar && \
   curl -sSL $SYNCTHING_URL | tar -zx -C /app && \
   mv /app/syncthing-linux-arm-v$SYNCTHING_VERSION/* /app && \
-  rm -d /app/syncthing-linux-arm-v$SYNCTHING_VERSION && \
+  rm -rf /app/syncthing-linux-arm-v$SYNCTHING_VERSION && \
   chmod +x /app/syncthing
   
   
