--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -5,6 +5,19 @@ LABEL AUTHOR=AnRightHand
 ENV SYNCTHING_VERSION=1.2.1
 ENV SYNCTHING_URL=https://github.com/syncthing/syncthing/releases/download/v${SYNCTHING_VERSION}/syncthing-linux-arm-v${SYNCTHING_VERSION}.tar.gz
 
+EXPOSE 8384 22000 21027/UDP
+VOLUME /config /sync
+
+RUN addgroup \
+    -S -g 1000 \
+    syncthing && \
+  adduser \
+    -S -H -D \
+    -s /bin/bash \
+    -u 1000 \
+    -G syncthing \
+    syncthing 
+  
 WORKDIR /app
 
 RUN apk --update --no-cache add bash curl tar && \
@@ -12,9 +25,11 @@ RUN apk --update --no-cache add bash curl tar && \
   mv /app/syncthing-linux-arm-v$SYNCTHING_VERSION/* /app && \
   rm -rf /app/syncthing-linux-arm-v$SYNCTHING_VERSION && \
   chmod +x /app/syncthing
-  
-  
-EXPOSE 8384 22000 21027/UDP
-VOLUME /config /sync
+  chmod -R 777 /app && \
+  chmod -R 777 /config && \
+  chmod -R 777 /sync
+
+
+USER syncthing
 
 CMD /app/syncthing -home /config/ -no-browser
