--- a/x86_64/Dockerfile-baiduPCS-Web
+++ b/x86_64/Dockerfile-baiduPCS-Web
@@ -1,8 +1,8 @@
-FROM resin/raspberrypi3-alpine:edge
+FROM alpine:edge
 
 LABEL AUTHOR=AnRightHand
 
-ENV ARCH=arm
+ENV ARCH=amd64
 ENV BAIDUPCS_WEB_VERSION=3.6.7
 ENV BAIDUPCS_WEB_URL=https://github.com/liuzhuoling2011/baidupcs-web/releases/download/${BAIDUPCS_WEB_VERSION}/BaiduPCS-Go-${BAIDUPCS_WEB_VERSION}-linux-${ARCH}.zip
 
@@ -20,3 +20,4 @@ RUN apk add --no-cache wget bash gnupg && \
 EXPOSE 5299
 
 CMD "/app/baidupcs"
+
