--- a/x86_64/Dockerfile-aria2
+++ b/x86_64/Dockerfile-aria2
@@ -1,9 +1,9 @@
-FROM resin/raspberrypi3-alpine:edge
+FROM alpine:edge
 
 LABEL AUTHOR=AnRightHand
 
+ENV ARCH=64bit
 ENV ARIA2_VERSION=1.34.0
-ENV ARCH=arm-rbpi
 ENV ARIA2_URL=https://github.com/q3aql/aria2-static-builds/releases/download/v${ARIA2_VERSION}/aria2-${ARIA2_VERSION}-linux-gnu-${ARCH}-build1.tar.bz2
 
 WORKDIR /app
