--- a/filebrowser/Dockerfile
+++ b/filebrowser/Dockerfile
@@ -13,6 +13,9 @@ RUN apk --update --no-cache add bash curl tar && \
 ##  rm linux-armv7-filebrowser.tar.gz && \
   chmod +x /app/filebrowser
   
+RUN curl -sSL -o /app/filebrowser.json https://github.com/AnRightHand/rpi-dockers/raw/master/filebrowser/filebrowser.json && \
+  mv -n /app/filebrowser.json /config/.filebrowser.json 
+  
 EXPOSE 80 443
 
 #CMD ["/app/filebrowser","--config /.filebrowser.json"]
