fixed default config used error

--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add curl bash \
         && curl https://getcaddy.com | bash -s personal http.webdav 
 VOLUME /config
 
-RUN curl -sSL -o /app/Caddyfile https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/Caddyfile && \
+RUN mkdir /app &&  curl -sSL -o /app/Caddyfile https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/Caddyfile && \
   mv -n /app/Caddyfile /config/Caddyfile
 
 CMD [ "caddy","-conf","/config/Caddyfile" ]
