--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -12,7 +12,7 @@ VOLUME /config
 
 # Add config file
 #ADD minidlna.conf /config/minidlna.conf
-RUN curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/minidlna.conf && \
+RUN mkdir /app &&  curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/minidlna.conf && \
   mv -n /app/minidlna.conf /config/minidlna.conf
 
 #ENTRYPOINT [ "/usr/sbin/minidlnad", "-S" ]
