--- a/x86_64/docker-compose.yml
+++ b/x86_64/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /docker/data/portainer:/data
+      - /mnt/docker/data/portainer:/data
   aria2:
     container_name: aria2
     build:
@@ -22,9 +22,9 @@ services:
       - "6800:6800"
       - "6881-6999:6881-6999"
     volumes:
-      - /docker/conf/aria2:/config
-      - /docker/data/downloads:/data
-      - /docker/data/other/downloads:/downloads
+      - /mnt/docker/conf/aria2:/config
+      - /mnt/docker/data/downloads:/data
+      - /mnt/docker/data/other/downloads:/downloads
 
   filebrowser:
     container_name: filebrowser
@@ -33,9 +33,9 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - /docker/conf/filebrowser/filebrowser.json:/.filebrowser.json
-      - /docker/conf/filebrowser/database.db:/database.db
-      - /docker/data:/srv
+      - /mnt/docker/conf/filebrowser/filebrowser.json:/.filebrowser.json
+      - /mnt/docker/conf/filebrowser/database.db:/database.db
+      - /mnt/docker/data:/srv
 
   caddy:
     container_name: caddy
@@ -47,8 +47,8 @@ services:
       - "8080:80"
       - "8443:443"
     volumes:
-      - /docker/conf/caddy:/config
-      - /docker/data:/webroot
+      - /mnt/docker/conf/caddy:/config
+      - /mnt/docker/data:/webroot
 
   gitea:
     container_name: gitea
@@ -58,7 +58,7 @@ services:
       - "3000:3000"
       - "8822:22"
     volumes:
-      - /docker/data/gitea:/data
+      - /mnt/docker/data/gitea:/data
 
   syncthing:
     container_name: syncthing
@@ -69,10 +69,10 @@ services:
       - "8384:8384"
       - "21027:21027/udp"
     volumes:
-      - /docker/conf/syncthing:/config
-      - /docker/data/sync:/sync
-      - /docker/data/sync:/data1
-      - /docker/data/other/sync:/data2
+      - /mnt/docker/conf/syncthing:/config
+      - /mnt/docker/data/sync:/sync
+      - /mnt/docker/data/sync:/data1
+      - /mnt/docker/data/other/sync:/data2
 
   baiduPCS:
     container_name: baiduPCS
@@ -83,8 +83,8 @@ services:
     ports:
       - "5299:5299"
     volumes:
-      - /docker/data/BDdownloads:/root/Download
-      - /docker/data/other/BDdownloads:/root/Downloads
+      - /mnt/docker/data/BDdownloads:/root/Download
+      - /mnt/docker/data/other/BDdownloads:/root/Downloads
 
   v2ray:
     container_name: v2ray
@@ -94,4 +94,4 @@ services:
       - "1081-1089:1081-1089"
       - "1091-1099:1091-1099/udp"
     volumes:
-      - /docker/conf/v2ray/config.json:/etc/v2ray/config.json
+      - /mnt/docker/conf/v2ray/config.json:/etc/v2ray/config.json
