--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -10,10 +10,8 @@ EXPOSE 8200
 
 VOLUME /config
 
-# Add config file
-#ADD minidlna.conf /config/minidlna.conf
-RUN mkdir /app &&  curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/minidlna.conf && \
-  mv -n /app/minidlna.conf /config/minidlna.conf
-
-#ENTRYPOINT [ "/usr/sbin/minidlnad", "-S" ]
 CMD /usr/sbin/minidlnad -f /config/minidlna.conf -S
+
+#RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh
+
+#CMD /app/run.sh
