--- a/x86_64/Dockerfile-aria2
+++ b/x86_64/Dockerfile-aria2
@@ -17,10 +17,10 @@ RUN apk --update --no-cache add bash curl tar && \
   chmod +x /app/aria2c
   
 VOLUME /config
+EXPOSE 6800 6881-6999/udp
 
-RUN curl -sSL -o /app/aria2.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/aria2/aria2.conf && \
-  mv -n /app/aria2.conf /config/aria2.conf
+#CMD /app/aria2c --conf-path=/config/aria2.conf
 
-EXPOSE 6800
+RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/aria2/run.sh
 
-CMD /app/aria2c --conf-path=/config/aria2.conf
+CMD /app/run.sh
