--- a/x86_64/Dockerfile-filebrowser
+++ b/x86_64/Dockerfile-filebrowser
@@ -15,7 +15,7 @@ RUN apk --update --no-cache add bash curl tar && \
 
 EXPOSE 80 443
 
-#CMD /app/filebrowser --config /.filebrowser.json
+#CMD /app/filebrowser --config /config/filebrowser.json
 
 RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/filebrowser/run.sh
 
