--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -12,6 +12,6 @@ VOLUME /config
 
 CMD /usr/sbin/minidlnad -f /config/minidlna.conf -S
 
-#RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh
+#RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh && chmod +x /app/run.sh
 
 #CMD /app/run.sh
