--- a/x86_64/Dockerfile-caddy
+++ b/x86_64/Dockerfile-caddy
@@ -9,6 +9,6 @@ EXPOSE 80 443
 
 #CMD [ "caddy","-conf","/config/Caddyfile" ]
 
-RUN mkdir /app && curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/run.sh
+RUN mkdir /app && curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/run.sh  && chmod +x /app/run.sh
 
 CMD /app/run.sh
