not used default config

--- a/minidlna/Dockerfile
+++ b/minidlna/Dockerfile
@@ -12,6 +12,7 @@ VOLUME /config
 
 CMD /usr/sbin/minidlnad -f /config/minidlna.conf -S
 
-#RUN curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh && chmod +x /app/run.sh
+#RUN mkdir -p /app && curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/minidlna.conf && \ 
+#  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh && chmod +x /app/run.sh
 
 #CMD /app/run.sh
