--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,9 +1,9 @@
-:80 {
+http://0.0.0.0:80 {
  root /webroot/caddy/www
  timeouts none
  gzip
  basicauth /webdav admin admin
- webdav /webdav/ {
+ webdav /webdav {
   scope /webroot/
   modify false
  }
