--- a/x86_64/docker-compose.yml
+++ b/x86_64/docker-compose.yml
@@ -13,6 +13,12 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /mnt/docker/data/portainer:/data
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
+      
   aria2:
     container_name: aria2
     build:
@@ -27,6 +33,11 @@ services:
       - /mnt/docker/conf/aria2:/config
       - /mnt/docker/data/downloads:/data
       - /mnt/docker/data/other/downloads:/downloads
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   filebrowser:
     container_name: filebrowser
@@ -40,6 +51,11 @@ services:
     volumes:
       - /mnt/docker/conf/filebrowser:/config
       - /mnt/docker/data:/srv
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   caddy:
     container_name: caddy
@@ -54,7 +70,11 @@ services:
     volumes:
       - /mnt/docker/conf/caddy:/config
       - /mnt/docker/data:/webroot
-
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   gitea:
     container_name: gitea
@@ -66,6 +86,11 @@ services:
       - "8822:22"
     volumes:
       - /mnt/docker/conf/gitea:/data
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   syncthing:
     container_name: syncthing
@@ -83,6 +108,11 @@ services:
       - /mnt/docker/data/sync:/sync
       - /mnt/docker/data/sync:/data1
       - /mnt/docker/data/other/sync:/data2
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   baidu-pcs:
     container_name: baidu-pcs
@@ -96,6 +126,11 @@ services:
     volumes:
       - /mnt/docker/data/BDdownloads:/root/Download
       - /mnt/docker/data/other/BDdownloads:/root/Downloads
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
 
   nexus3:
     container_name: nexus3
@@ -106,6 +141,11 @@ services:
       - "8082:8081"
     volumes:
       - /mnt/docker/data/nexus3:/nexus-data
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
       
   auto-qiandao:
     container_name: auto-qiandao
@@ -118,6 +158,11 @@ services:
       - "8083:80"
     volumes:
       - /mnt/docker/conf/qiandao:/config
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
   
   v2ray:
     container_name: v2ray
@@ -131,3 +176,8 @@ services:
       - "1091-1095:1091-1095/udp"
     volumes:
       - /mnt/docker/conf/v2ray/:/config
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "3"
